--- a/WebMarket/src/main/webapp/WEB-INF/web.xml
+++ b/WebMarket/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/exceptionNoPage.jsp</location>
+	</error-page>
+
 	<security-role>
 		<description></description>
 		<role-name>admin</role-name>
