--- a/JSPBook/src/main/webapp/WEB-INF/web.xml
+++ b/JSPBook/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-<!-- 지금 안댐
 	<filter>
 		<filter-name>Filter01</filter-name>
 		<filter-class>ch12.com.filter.AuthenFilter</filter-class>
+		
+		<filter-name>Filter02</filter-name>
+		<filter-class>ch12.com.filter.InitParamFilter</filter-class>
+		
+		<filter-name>Filter02_2</filter-name>
+		<filter-class>ch12.com.filter.LogFileFilter</filter-class>
+		
+		<init-param>
+			<param-name>param1</param-name>
+			<param-value>admin</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>param2</param-name>
+			<param-value>1234</param-value>
+		</init-param>
+		
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>c:\\logs\\monitor.log</param-value>
+		</init-param>
 	</filter>
+	
 	<filter-mapping>
 		<filter-name>Filter01</filter-name>
 		<url-pattern>/ch12/filter01_process.jsp</url-pattern>
+		
+		<filter-name>Filter02</filter-name>
+		<url-pattern>/ch12/filter02_process.jsp</url-pattern>
+		
+		<filter-name>Filter02_2</filter-name>
+		<url-pattern>/ch12/filter02_process.jsp</url-pattern>
 	</filter-mapping>
-	 -->
+	
 	<error-page>
 		<error-code>500</error-code>
 		<location>/ch11/errorCode_error.jsp</location>
