--- a/WebMarket/src/main/webapp/WEB-INF/web.xml
+++ b/WebMarket/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
 
+	<filter>
+		<filter-name>LogFileFilter</filter-name>
+		<filter-class>filter.LogFileFilter</filter-class>
+		<init-param>
+			<param-name>filename</param-name>
+			<param-value>c:\\logs\\webmarket.log</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>LogFileFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 	<error-page>
 		<error-code>404</error-code>
 		<location>/exceptionNoPage.jsp</location>
